--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2> PENSAMENTO COMPUTACIONAL - 2023</h2>
 
     <p> Durante o terceiro trimestre de 2022 estão ocorrendo os encontros do 
-    GE Formadores em Ação de Pensamento Computacional 2023.</p>
+    GE Formadores em Ação de <b>Pensamento Computacional 2023 </b>.</p>
     
     <p>São várias turmas em diferentes horários e tem duração de 1h e 40m. </p>
     
